<resources>
    <string name="app_name">Formulierinschrijven</string>
    <string name="meld_je_nu_aan_voor_een_open_dag">Meld je nu aan voor een open dag!</string>
    <string name="email">Email:</string>
    <string name="naam">Naam:</string>
    <string name="telefoonnummer">Telefoonnummer:</string>
    <string name="achternaam">Achternaam:</string>
    <string name="datum">Datum:</string>
    <string name="verstuur">Verstuur</string>
</resources>
