<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/meld_je_nu_aan_voor_een_open_dag"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naam"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achternaam"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/inputLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefoonnummer"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/inputMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datum"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:autofillHints="" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/verstuur"
        android:textColor="@color/white" />


</LinearLayout>
